--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "chai": "^4.1.2",
+    "chalk": "^2.3.0",
     "mocha": "^5.0.0",
+    "ndjson": "^1.5.0",
     "nodemon": "^1.14.11"
   }
 }
