--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "start": "npm run build && node ./dist/bundle.js",
     "test": "nyc --reporter=html --reporter=text mocha --require babel-core/register --reporter nyan",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
-
   },
   "author": "Gaetan Puleo <gaetan.puleo.dev@gmail.com>",
   "license": "ISC",
@@ -24,6 +23,7 @@
     "webpack": "^3.10.0"
   },
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "chai": "^4.1.2",
     "chalk": "^2.3.0",
     "mocha": "^5.0.0",
